feat: add booking crud
